--- a/Trabalho-template-Bootstrap/assets/css/main.css
+++ b/Trabalho-template-Bootstrap/assets/css/main.css
@@ -147,7 +147,7 @@ h6 {
 # Global Header
 --------------------------------------------------------------*/
 .header {
-  --background-color: rgba(0, 0, 0, 0.5);
+  --background-color: rgb(1, 115, 150);
   --default-color: #ffffff;
   --heading-color: #ffffff;
   color: var(--default-color);
