--- a/Trabalho-template-Bootstrap/assets/css/main.css
+++ b/Trabalho-template-Bootstrap/assets/css/main.css
@@ -19,7 +19,7 @@
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
-  --background-color: #ffffff; /* Background color for the entire website, including individual sections */
+  --background-color: #00b7ff11; /* Background color for the entire website, including individual sections */
   --default-color: #555555; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #0d3035; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #3ec1d5; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
@@ -66,8 +66,12 @@ body {
   color: var(--default-color);
   background-color: var(--background-color);
   font-family: var(--default-font);
+  scrollbar-width: none;
 }
 
+html{
+    scrollbar-width: none;
+}
 
 
 a {
@@ -147,7 +151,7 @@ h6 {
 # Global Header
 --------------------------------------------------------------*/
 .header {
-  --background-color: rgb(1, 115, 150);
+  --background-color: rgba(1, 115, 150, 0.39);
   --default-color: #ffffff;
   --heading-color: #ffffff;
   color: var(--default-color);
@@ -1827,6 +1831,3 @@ section,
   /* Add your styles here */
 }
 
-.section{
-  background-color: rgba(97, 97, 97, 0.144);
-}
