--- a/Trabalho-template-Bootstrap/assets/css/main.css
+++ b/Trabalho-template-Bootstrap/assets/css/main.css
@@ -19,11 +19,11 @@
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
-  --background-color: #00b7ff11; /* Background color for the entire website, including individual sections */
-  --default-color: #555555; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #0d3035; /* Color for headings, subheadings and title throughout the website */
+  --background-color: #000000b7; /* Background color for the entire website, including individual sections */
+  --default-color: #727272; /* Default color used for the majority of the text content across the entire website */
+  --heading-color: #ffffff; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #3ec1d5; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
-  --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
+  --surface-color: #000000; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
 
@@ -151,7 +151,7 @@ h6 {
 # Global Header
 --------------------------------------------------------------*/
 .header {
-  --background-color: rgba(1, 115, 150, 0.39);
+  --background-color: rgba(0, 0, 0, 0.39);
   --default-color: #ffffff;
   --heading-color: #ffffff;
   color: var(--default-color);
@@ -1830,4 +1830,3 @@ section,
 .starter-section {
   /* Add your styles here */
 }
-
